added logout button to the sidenav

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -28,6 +28,7 @@
   		<li><a href="#news">News</a></li>
   		<li><a href="#contact">Contact</a></li>
   		<li><a href="#about">About</a></li>
+  		<li><button id="logOutButton">Log Out</button></li>
 	</ul>
 
 
@@ -43,7 +44,7 @@
     </div>
     
     
-    <button id="logOutButton">Log Out</button>
+    <!--<button id="logOutButton">Log Out</button>-->
     <script>
     	$(document).ready(function(){
     		$("#logOutButton").click(function(){
