--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,49 +31,29 @@
     </section>-->
     
     <!--<% include ../partials/nav.ejs %>-->
-    <div class="parallax2">
-      <h1>parralax 2</h1>
-      <p> </p>
+    <div class="parallax2" style="text-align:left;">
 
-    	<h1>header 1</h1>
-     	 <p> paragraph</p>
-     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-				link to node
-     		 </a>
-      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-				<span class="glyphicon glyphicon-download"></span>
-				link to github
-      		</a>
+    	<h1 class="panel2Header" style="text-align:left;">Our Mission</h1>
+     	 <p class="secondP"> As a resourceful community of experienced collegiate student-athletes, we 
+				strive to help high school and community college student-athletes optimize 
+				their academic and athletic potential through personalized peer mentoring.</p>
+				
     </div>
     
-    <div class="parallax3">
-      <h1>parallax 3</h1>
-      <p> this paragraph</p>
-
-    	<h1>I used to get money</h1>
-     	 <p> the paragraph</p>
-     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-				link to node
-     		 </a>
-      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-				<span class="glyphicon glyphicon-download"></span>
-				link to github
-      		</a>
+    <div class="parallax3" style="text-align:right;">
+    	<h1 class="panel3Header">How It Works</h1>
+     	 <p class="secondP">
+     	 	Based on their profile, student-athletes are matched with an appropriate mentor.
+     	 	Daily data is gathered on each student-athlete, which is analyzed by and discussed with their mentor.
+     	 </p>
     </div>
     
- 	<div class="parallax4">
-      <h1>parallax 4</h1>
-      <p>the paragraph is here</p>
-
-    	<h1>The header</h1>
-     	 <p> paragraphing</p>
-     		 <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span>
-				lining
-     		 </a>
-      		<a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started">
-				<span class="glyphicon glyphicon-download"></span>
-				link
-      		</a>
+ 	<div class="parallax4" style="text-align:left;"">
+    	<h1 class="panel2Header">Our Team</h1>
+     	 <p class="secondP">
+     	 	Our experienced student-athlete mentors have attended and competed for the following universities and community colleges:
+     	 	UC Berkeley, Cal Poly SLO, Wesleyan University, City College of San Francisco.
+     	 </p>
     </div>
 
 
